sql/sql_yacc.yy
@@ -1786,6 +1786,8 @@ event_tail:
             if (!(lex->event_parse_data= Event_parse_data::new_instance(thd)))
               MYSQL_YYABORT;
             lex->event_parse_data->identifier= $3;
+            lex->event_parse_data->on_completion=
+                                  Event_parse_data::ON_COMPLETION_DROP;
 
             /*
               We have to turn of CLIENT_MULTI_QUERIES while parsing a
